--- a/frontend/src/pages/home/foot/footer.css
+++ b/frontend/src/pages/home/foot/footer.css
@@ -142,6 +142,7 @@ footer {
   }
   
   .pay {
+    background-color: transparent;
     display: flex;
     justify-content: center;
     align-items: center;
