--- a/frontend/src/pages/checkout/checkout.css
+++ b/frontend/src/pages/checkout/checkout.css
@@ -1,5 +1,5 @@
 .checkout-container {
-    margin: 20px 40px;
+    margin: 0px 80px;
     padding: 20px;
     background-color: #fff;
     border: 1px solid #ddd;
@@ -7,8 +7,7 @@
   }
   
   .checktop {
-    margin-top: 40px;
-    margin-bottom: 30px;
+    margin-bottom: 10px;
     text-align: center;
   }
   
@@ -24,8 +23,8 @@
   }
   
   .section {
-    margin-bottom: 20px;
-    padding: 20px 40px;
+    margin-bottom: 10px;
+    padding: 0px 30px;
   }
   
   .billing-details {
@@ -34,8 +33,8 @@
   }
   
   .billing-details label {
-    margin-top: 15px;
-    margin-bottom: 5px;
+    margin-top: 10px;
+    margin-bottom: 0;
   }
   
   .billing-details input,
@@ -55,8 +54,8 @@
   }
   
   .additional-information label {
-    margin-top: 15px;
-    margin-bottom: 5px;
+    margin-top: 10px;
+    margin-bottom: 0px;
   }
   
   .additional-information textarea {
@@ -87,7 +86,7 @@
   
   .delivery-information p {
     font-weight: 600;
-    font-size: 20px;
+    font-size: 19px;
     margin-top: 10px;
   }
   
@@ -96,7 +95,7 @@
   }
   
   .order-details {
-    padding: 20px;
+    padding: 15px;
     margin-bottom: 0px;
   }
   
