--- a/frontend/src/components/product.css
+++ b/frontend/src/components/product.css
@@ -3,6 +3,7 @@
   width: 270px;
   height: auto;
   border: 1px solid rgba(0, 0, 0, 0.1);
+  box-sizing: content-box;
   overflow: hidden;
   border-radius: 6px;
   padding: 0;
