--- a/frontend/src/pages/shop/shop.css
+++ b/frontend/src/pages/shop/shop.css
@@ -30,131 +30,7 @@
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); /* Adjust the minmax value as needed */
     grid-gap: 10px; /* Adjust the gap between grid items */
   }
-  
-  /* Sidebar Styles */
-  
-  .sidebarWrapper h4 {
-    font-size: 29px;
-    font-weight: 600;
-    position: relative;
-    padding-bottom: 5%;
-    margin-bottom: 18px;
-    margin-top: 15px;
-  }
-  
-  .sidebarWrapper h4:after {
-    content: "";
-    width: 100%;
-    height: 3px;
-    background: #f0f0f0;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-  }
-  
-  .sidebarWrapper h4:before {
-    content: "";
-    width: 20%;
-    height: 3px;
-    background: #111861;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    z-index: 10;
-  }
-  
-  .sidebarWrapper .sidebar .card {
-    background-color: #fff;
-    padding: 15px;
-    border-radius: 4px;
-    margin: 15px 20px;
-  }
-  
-  .catItem {
-    display: flex;
-    align-items: center;
-    padding: 10px;
-    border: 1.3px solid rgba(0, 0, 0, 0.1);
-    cursor: pointer;
-    margin: 5px;
-    border-radius: 4px;
-    transition: all 0.3s ease-in-out;
-  }
-  
-  .catItem:hover {
-    border: 1px solid rgba(0, 0, 0, 0.3);
-    background-color: #1118613f;
-  }
-  
-  .catItem h5 {
-    color: #000;
-    font-size: 17px;
-  }
-  
-  .rounded-circle {
-    background: #111861;
-    color: #fff;
-    border-radius: 50%;
-    width: 20px;
-    height: 20px;
-    margin-left: auto;
-    font-size: 13px;
-    font-weight: 400;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .card .slider {
-    color: #111861;
-    font-size: 17px;
-  }
-  
-  .priceRange span {
-    font-size: 17px;
-    font-weight: 600;
-    display: flex;
-    padding-top: 5px;
-    padding-bottom: 0px;
-  }
-  
-  .priceRange span strong {
-    color: #111861;
-    font-size: 18px;
-  }
-  
-  .filters {
-    padding: 10px 0px;
-  }
-  
-  .card h5 {
-    font-size: 20px;
-    font-weight: 600;
-    margin-bottom: 10px;
-  }
-  
-  .filters ul {
-    max-height: 200px;
-    overflow-y: auto;
-  }
-  
-  .filters ul::-webkit-scrollbar {
-    width: 10px !important;
-  }
-  
-  .filters ul::-webkit-scrollbar-thumb {
-    background: #ccc !important;
-  }
-  
-  .filters ul li {
-    width: 100%;
-    margin-bottom: 0px;
-    list-style: none;
-    font-size: 16px;
-    font-weight: 500;
-  }
-  
-/* Features Styles */
+  /* Features Styles */
 .features {
   position: relative;
 }
@@ -214,3 +90,104 @@
   background-color: #111861a4;
   color: #fff;
 }
+
+  /* Sidebar Styles */
+  
+  .sidebarWrapper h4 {
+    font-size: 29px;
+    font-weight: 600;
+    position: relative;
+    padding-bottom: 0px;
+    margin-bottom: 5px;
+    margin-top: 0px;
+  }
+
+  .sidebarWrapper .sidebar .card {
+    background-color: #fff;
+    padding: 15px;
+    border-radius: 4px;
+    margin: 15px 20px;
+  }
+  
+  .catItem {
+    font-size: 18px;
+    font-weight: 500;
+    cursor: pointer;
+    margin-bottom: 5px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    background-color: #f9f9f9;
+    color: #000;
+    text-align: center;
+    padding: 0px 10px;
+  }
+  
+  .catItem:hover {
+    border: 1px solid rgba(0, 0, 0, 0.3);
+    background-color: #1118613f;
+  }
+  
+  .rounded-circle {
+    background: #111861;
+    color: #fff;
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+    margin-left: auto;
+    margin-bottom: 20px;
+    font-size: 13px;
+    font-weight: 400;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .card .slider {
+    color: #111861;
+    font-size: 17px;
+  }
+  
+  .priceRange span {
+    font-size: 17px;
+    font-weight: 600;
+    display: flex;
+    padding-top: 5px;
+    padding-bottom: 0px;
+  }
+  
+  .priceRange span strong {
+    color: #111861;
+    font-size: 18px;
+  }
+  
+  .filters {
+    padding: 10px 0px;
+  }
+  
+  .card h5 {
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 10px;
+  }
+  
+  .filters ul {
+    max-height: 200px;
+    overflow-y: auto;
+  }
+  
+  .filters ul::-webkit-scrollbar {
+    width: 10px !important;
+  }
+  
+  .filters ul::-webkit-scrollbar-thumb {
+    background: #ccc !important;
+  }
+  
+  .filters ul li {
+    width: 100%;
+    margin-bottom: 0px;
+    list-style: none;
+    font-size: 16px;
+    font-weight: 500;
+  }
+  
